--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp19.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp19.html
@@ -118,7 +118,7 @@
   <code>m = 0</code>
   <p>Иногда такие графы называются вполне несвязными. Пустой граф из n вершин обозначается символом Oₙ.</p>
   <p><strong>Определение 28.</strong> <strong>Полный граф</strong> — это граф c максимальным количеством рёбер</p>
-  <code>(m = n(n - 1)/2)</code>
+  <code>m = n * (n - 1) / 2</code>
   <p>Полный граф из n вершин обозначается символом Kₙ. Например, K₂ — отрезок, а K₃ — треугольник.</p>
   <p><strong>Определение 29.</strong> <strong>Регулярный граф</strong> — это граф, у которого все степени вершин равны. В k-регулярном графе все степени равны k. Например:</p>
   <ul>
@@ -164,17 +164,21 @@
     <li>Занимает O(n²) памяти, поскольку для каждой вершины хранится существование ребра для всех остальных вершин. Например, если в графе 10⁵ вершин и порядка 10⁵ ребер, то такое представление займет 10¹⁰ ячеек памяти.</li>
     <li>Перечисление всех смежных вершин занимает O(n) времени, даже если степень вершины маленькая.</li>
   </ol>
-  <p>Реализация кода для записи матрицы смежности:</p>
+  <p>На вход подается неориентированный граф из n вершин и m ребер, заданный списком ребер. Сохраним его в матрицу смежности</p>
 <pre>
-int n, m;
+int n; // число вершин
+int m; // число ребер
 cin >> n >> m;
+int a, b; // две вершины одного ребра
+
+// матрица смежности
 vector&lt;vector&lt;int&gt; &gt; G(n + 1, vector&lt;int&gt;(n + 1));
 
+// список ребер сохраним в матрицу смежности
 for (int i = 0; i &lt; m; i++) {
-  int x, y;
-  cin >> x >> y;
-  G[x][y] = 1;
-  G[y][x] = 1;
+  cin >> a >> b;
+  G[a][b] = 1;
+  G[b][a] = 1;
 }
 </pre>
 
@@ -194,17 +198,42 @@ for (int i = 0; i &lt; m; i++) {
 </pre>
 
   <p>Список смежности в C++ удобно хранить в виде вектора векторов целых чисел (т. е. как vector&lt;vector&lt;int&gt; &gt;). Иногда в качестве внешнего вектора используется массив. Размер внешнего вектора — количество вершин графа n, а i-я ячейка содержит список (вектор) всех вершин, которые смежны с i-й. Такое представление графа значительно более компактно (занимает O(n + m) единиц памяти).</p>
-  <p>Следующий код считывает неориентированный граф. Вершины пронумерованы от 1 до n:</p>
+
+  <p>На вход подается неориентированный граф из n вершин и m ребер в виде списка ребер. Сохраним его в список смежности G:</p>
 <pre>
-int n, m;
+int n; // число вершин
+int m; // число ребер
 cin >> n >> m;
+int a, b; // две вершины одного ребра
+
+// список смежности
 vector&lt;vector&lt;int&gt; &gt; G(n + 1);
 
+// список ребер сохраним в список смежности
 for (int i = 0; i &lt; m; i++) {
-  int x, y;
-  cin >> x >> y;
-  G[x].push_back(y);
-  G[y].push_back(x);
+  cin >> a >> b;
+  G[a].push_back(b);
+  G[b].push_back(a);
+}
+</pre>
+
+  <p>На вход подается неориентированный граф из n вершин в виде матрицы смежности. Сохраним его в список смежности G:</p>
+<pre>
+int n; // число вершин
+cin >> n;
+int in;
+
+// список смежности
+vector&lt;vector&lt;int&gt; &gt; G(n + 1);
+
+// матрицу смежности сохраним в список смежности
+for (int i = 1; i &lt;= n; i++) {
+  for (int j = 1; j &lt;= n; j++) {
+    cin >> in;
+    if (in == 1) {
+      G[i].push_back(j);
+    }
+  }
 }
 </pre>
 
@@ -212,16 +241,19 @@ for (int i = 0; i &lt; m; i++) {
 
   <p>Самый непопулярный способ хранения графа при решении задач, однако крайне удобный способ задать граф в задачах в качестве входных данных.</p>
   <p><strong>Определение 33.</strong> <strong>Список ребер</strong> — это массив пар элементов размера m (m — количество ребер), состоящий из пар целых чисел (xᵢ, yᵢ), где xᵢ и yᵢ — номера вершин, соединенных ребром (xᵢ, yᵢ).</p>
-  <p>Пример задания списка ребер в неориентированном графе по рис. 3: (1, 2), (1, 5), (1, 7), (2, 3), (3, 4), (3, 5), (5, 6), (5, 7).</p>
+  <p>Пример задания списка ребер в неориентированном графе по рис. 3:</p>
+  <code>(1, 2), (1, 5), (1, 7), (2, 3), (3, 4), (3, 5), (5, 6), (5, 7)</code>
+
   <p>Данный метод имеет огромные недостатки при обработке графа.</p>
   <ol>
     <li>Для поиска всех смежных вершин для вершины x потребуется линейный проход по всему списку ребер, что займет O(m) действий.</li>
     <li>Поиск любого ребра занимает порядка O(m) операций.</li>
   </ol>
 
-  <p>Реализация кода для записи списка ребер:</p>
+  <p>На вход подается неориентированный граф из n вершин и m ребер в виде списка ребер. Сохраним его в список ребер G:</p>
 <pre>
-int n, m;
+int n; // число вершин
+int m; // число ребер
 cin >> n >> m;
 vector&lt;pair&lt;int, int&gt; &gt; G(m);
 
@@ -475,7 +507,7 @@ int main() {
 using namespace std;
 
 int main() {
-  // ускорение ввода-вывода
+  // ускорение ввода
   ios::sync_with_stdio(0);
   cin.tie(0);
 
@@ -678,11 +710,13 @@ int main() {
 #endif
 
   // ввод данных
-  int n;
+  int n; // число вершин
   cin >> n;
   int tmp;
 
-  vector&lt;vector&lt;int&gt; &gt; G(n + 1);
+  vector&lt;vector&lt;int&gt; &gt; G(n + 1); // список смежности
+
+  // переведем матрицу смежности в список смежности
   for (int i = 1; i &lt;= n; i++) {
     for (int j = 1; j &lt;= n; j++) {
       cin >> tmp;
@@ -1224,10 +1258,15 @@ int main() {
 
   <details>
     <summary>Решение не готово</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/292/problem/B" target="_blank">Задача 292B</a>
+      <br><a href="https://codeforces.com/contest/292" target="_blank">Чемпионат КРОК 2013 - Раунд 1 2013-04-15</a>
+    </div>
+
 <pre>
 #include &lt;iostream&gt;
 #include &lt;vector&gt;
-#include &lt;set&gt;
 
 using namespace std;
 
@@ -1247,99 +1286,61 @@ int main() {
   int n; // число вершин
   int m; // число ребер
   cin >> n >> m;
+  int a, b; // две вершины одного ребра
 
-  vector&lt;set&lt;int&gt; &gt; G(n+1);
-  int x, y; // две вершины одного ребра
+  // список смежности
+  vector&lt;vector&lt;int&gt; &gt; G(n + 1);
 
-  // из списка ребер соберем список смежности
-  for (int i = 0; i &lt; m; i++) {
-    cin >> x >> y;
-    G[x].insert(y);
-    G[y].insert(x);
+  // список ребер сохраним в список смежности
+  for (int i = 1; i &lt;= m; i++) {
+    cin >> a >> b;
+    G[a].push_back(b);
+    G[b].push_back(a);
   }
 
   // решение
   string res;
-  bool good = true; // топология известна
-  int mode = 0;  // топология не задана
-  int node = 0;
-  // mode = 1;  // топология шина
-  // mode = 2;  // топология кольцо
-  // mode = 3;  // топология звезда
 
-  // если одна вершина соединяется с тремя и более
-  // вершинами то проверим топологию на звезду
-  // если больше одной вершины соединяется с тремя и более
-  // вершинами то топология неизвестна
-  for (int i = 1; good && i &lt;= n; i++) {
+  // посчитаем степень каждой вершины
+  int st1 = 0; // число вершин со степенью 1
+  int st2 = 0; // число вершин со степенью 2
+  int st3 = 0; // число вершин со степенью 3 и более
+  for (int i = 1; i &lt;= n; i++) {
+    if (G[i].size() == 1) {
+      st1++;
+    }
+    if (G[i].size() == 2) {
+      st2++;
+    }
     if (G[i].size() > 2) {
-      if (mode == 0) {
-        mode = 3; // надо проверить топологию на звезду
-        node = i; // вершина звезды
-      } else {
-        mode = 0;
-        good = false; // топология неизвестна
-      }
+      st3++;
     }
   }
 
-  // проверим топологию на звезду
-  if (mode == 3) {
-    for (int i = 1; good && i &lt;= n; i++) {
-      if (G[i].size() == n - 1) {
-        int sum1 = 0;
-        for (int g : G[i]) {
-          sum1 += g;
-        }
-        int sum2 = n * (n + 1) / 2;
-        if (sum1 != sum2 - node) {
-          mode = 0;
-          good = false;
-        }
-      } else if (G[i].size() == 1) {
-        if (G[i].find(node) == G[i].end()) {
-          mode = 0;
-          good = false;
-        }
-      } else {
-        mode = 0;
-        good = false;
-      }
-    }
+  // если у двух вершин степень 1
+  // а у остальных степень 2
+  // то это топология шина
+  if (st1 == 2 && st2 == n - st1) {
+    res = "bus topology";
   }
 
-  // если каждая вершина соединяется с двумя вершинами
-  // то проверим топологию на кольцо
-  if (mode == 0) {
-    mode = 2;
-    for (int i = 1; good && i &lt;= n; i++) {
-      if (G[i].size() != 2) {
-        mode = 0;
-        good = false;
-    }
+  // если у всех вершин степень 2
+  // то это топология кольцо
+  if (st2 == n) {
+    res = "ring topology";
   }
 
-  // проверим топологию на кольцо
-  if (mode == 2) {
-    set&lt;int&gt; N;
-    for (int i = 1; i &lt;= n; i++) {
-      N.insert(i);
-    }
-    for (int i = 1; i &lt;= n; i++) {
-      for (int g: G[i])
-      if (N.find(g) != N.end()) {
-      //
-      }
-  }
 
-  // если две вершины соединяются только с одной вершиной
-  // а остальные с двумя то проверим топологию на шину
+  // если у одной вершины степень больше 2
+  // а у остальных степень 1
+  // то это топология звезда
+  if (st3 == 1 && st1 == n - st3) {
+    res = "star topology";
+  }
 
   // вывод результата
-  if (good) {
-    if (mode == 3) {
-      cout &lt;&lt; "star topology";
-    }
+  if (res.size()) {
+    cout &lt;&lt; res;
   } else {
     cout &lt;&lt; "unknown topology";
   }
