--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp23.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp23.html
@@ -203,6 +203,7 @@ for (int i = 1; i &lt;= n; i++) {
 
   <p>Есть способ подсчета сочетание через математический объект треугольник Паскаля. Каждая строка которого показывает биномиальные коэффициенты многочленов (a + b)ⁿ.</p>
   <p>Элементы треугольника получаются из суммы двух элементов строкой выше.</p>
+  <p>Чтобы найти число сочетаний C<sub>n</sub><sup>k</sup> (C из n по k), надо взять n-ую строчку треугольника сверху и отсчитать k-ый элемент слева. В нем будет находиться ответ.</p>
 <pre>
               1
             1    1
@@ -212,6 +213,21 @@ for (int i = 1; i &lt;= n; i++) {
   1   5    10   10   5   1
 1   6   15   20   15   6   1
 </pre>
+
+  <p>Построим треугольник Паскаля.</p>
+<pre>
+int C[100][100];
+for (int i = 0; i &lt; 100; i++) {
+  C[i][0] = 1;
+  C[i][1] = 1;
+}
+for (int i = 1; i &lt; 100; i++) {
+  for (int j = 1; j &lt; i; j++) {
+    C[i][j] = C[i-1][j] + C[i-1][j-1];
+  }
+}
+</pre>
+
   <p>Программный способ нахождения чисел сочетаний через треугольник Паскаля (хороший вариант):</p>
 <pre>
 vector&lt;vector&lt;long long&gt; &gt; DP(n + 1, vector&long long&gt;(n + 1));
@@ -324,6 +340,12 @@ C..C
     <summary>Пример</summary>
     <code>2</code>
     <code>6</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Счастливых номеров среди n значных чисел будет ровно 2ⁿ. Нам же нужно посчитать все счастливые номера среди чисел начиная от однозначных до n значных</p>
+    <code>2ⁿ + 2ⁿ⁻¹ + ... + 2² + 2</code>
   </details>
 </article>
 
@@ -742,7 +764,6 @@ int main() {
     <summary>Решение</summary>
 <pre>
 #include &lt;iostream&gt;
-#include &lt;iomanip&gt;
 
 using namespace std;
 
@@ -751,8 +772,11 @@ int main() {
   ios::sync_with_stdio(0);
   cin.tie(0);
 
+  // ввод данных
   long long n, k;
   cin >> n >> k;
+
+  // решение
   long long res = 1;
   bool flag = false;
   if (k > 1) {
@@ -764,6 +788,7 @@ int main() {
     n--;
   }
 
+  // вывод результата
   if (flag) {
     cout &lt;&lt; res / 2;
   } else {
