--- a/src/components/code/code-c/c-books/pages/elem-book-c-15.html
+++ b/src/components/code/code-c/c-books/pages/elem-book-c-15.html
@@ -1,6 +1,7 @@
 <article class="article">
   <h1>1991 Шилдт - Язык Си для профессионалов. 384c</h1>
   <p>Конспект книги</p>
+  <p>Прочитана 2025.09.09</p>
 </article>
 
 
@@ -21,10 +22,10 @@
 </article>
 
 
-<!-- Исчезающие и иерархические меню (7) -->
+<!-- 1 Исчезающие и иерархические меню (7) -->
 <article class="article">
   <div class="anchor" id="p1"></div>
-  <h3>Исчезающие и иерархические меню (7)</h3>
+  <h3>1 Исчезающие и иерархические меню (7)</h3>
 
   <p>Создание исчезающих и иерархических меню требует прямого управления экраном. Программы доступа к экрану зависят от операционной системы и оборудования и не используют обычные функции Си ввода/вывода на консоль. Иерархическое меню требует более сложной программы, чем исчезающее меню.</p>
 
@@ -143,7 +144,171 @@ void restore_video(int startx, int endx, int starty, int endy, unsigned int *buf
 
   <p>Функция принимает массив указателей на строки. Каждая строка это соответствующий элемент меню.</p>
 <pre>
-
+void display_menu(char *menu[], int x, int y, int count) {
+  for (int i = 0; i &lt; counr; i++, x++) {
+    goto_xy(x, y);
+    printf(menu[i]);
+  }
+}
 </pre>
+
+  <p>Массив строк с пунктами меню может выглядеть так:</p>
+<pre>
+char *fruit[] = {
+  "Apple",
+  "Apelsin",
+  "Orange",
+  "Malina"
+}
+</pre>
+
+  <h4>Всвечивание рамки</h4>
+
+  <p>Для рамки можно использовать символы из стандартного набора символов.</p>
+<pre>
+void draw_border(int startx, int starty, int endx, int endy) {
+
+  for (int i = startx + 1; i &lt; endx; i++) {
+    goto_xy(i, starty);
+    putchar(179);
+    goto_xy(i, endy);
+    putchar(179);
+  }
+
+  for (int i = starty + 1; i &lt; endy; i++) {
+    goto_xy(startx, i);
+    putchar(196);
+    goto_xy(endx, i);
+    putchar(196);
+  }
+
+  goto_xy(startx, starty);
+  putchar(218);
+  goto_xy(startx, endy);
+  putchar(191);
+  goto_xy(endx, starty);
+  putchar(192);
+  goto_xy(endx, endy);
+  putchar(217);
+}
+</pre>
+
+  <h4>Ввод выбора пользователя</h4>
+
+  <p>Пользователь может выбрать пункт меню одним из двух способов. Первый способ это перемещаясь по пунктам меню с помощью клавиш "стрелка вниз" и "стрелка вверх" или пробелом. При этом активный пункт меню будет выделяться в инверсном режиме. Второй способ это выбор с помощью нажатия на горячую клавишу.</p>
+  <p>Функция get_resp() отвечает за выбор пользователя. Она использует функцию bioskey() вместо getchar() для ожидания и считывания нажатой клавиши. Функция getchar() возвращает только 8-битный код символа. Функция bioskey() считывает полный 16-битный код нажатой клавиши. Символы записываются в младшие 8-бит, при этом старшие 8-бит равны нулю. Специальные клавиши, такие как стрелка, записываются в старшие 8-бит, а младшие 8-бит равны нулю.</p>
+
+  <h4>Функция popup()</h4>
+
+  <p>Теперь можно написать функцию popup().</p>
+
+  <h4>Общий обзор</h4>
+
+  <p>Простая программа, показанная здесь, использует все программы, разработанные для исчезающих окон. Также используется функция cls() которая очищает экран.</p>
+
+  <h4>Прямой доступ к видео памяти</h4>
+
+  <p>При прямой записи и чтении из видео памяти, исчезающие меню будут появляться и исчезать без задержек. Обращение к видео памяти требует использования дальних указателей. Для этого есть два способа. Первый - использовать ключевое слово far, которое определяет указатель как дальний. Второй - использовать большую модель памяти, в которой все указатели дальние.</p>
+
+  <h4>Определение расположения видео памяти</h4>
+
+  <p>Одноцветный адаптер использует для видео паммяти адрес B0000000H, а все остальные - B8000000H. Программа должна знать какой адаптер имеет система. Функция 15 прерывания 16 возвращает текущий видео режим. Адаптеры CGA и EGA используют режимы 2 и 3. Одноцветный адаптер использует режим 7.</p>
+
+  <h4>Создание иерархическийх окон</h4>
+
+  <p>Иерархические окна могут иметь два и более исчезающих меню активными одновременно.</p>
+
+  <h4>Фреймы меню</h4>
+
+  <p>Каждое меню должно иметь свой фрейм ссылок. Каждое меню активизируется по номеру его фрейма и загружается по необходимости. Для этого нужен массив структур, содержащий всю информацию о меню.</p>
+
+  <h4>Создание фрейма меню</h4>
+
+  <p>Функция make_menu() создает фрейм меню. Функция make_menu вызывается с теми же параметрами что и popup() кроме номера меню, который передается первым параметром.</p>
+
+  <h4>Функция pulldown()</h4>
+
+  <p>Функция pulldown() принимает номер меню, которое нужно высветить.</p>
+
+  <h4>Восстановление окна</h4>
+
+  <p>Функция restore_video() передает номер окна, которое нужно восстановить.</p>
+</article>
+
+
+<!-- 2 Всплывающие окна (48) -->
+<article class="article">
+  <div class="anchor" id="p2"></div>
+  <h3>2 Всплывающие окна (48)</h3>
+
+  <p>Программа управления окнами использует функции прямого доступа к памяти. Поскольку окна часто имеют размер больше чем меню, использование функций BIOS невозможно из за их медлительности.</p>
+
+  <h4>Теория всплывающих окон</h4>
+
+  <p>Всплывающее окно представляет собой часть экрана. Перед появлением окна текущее содержимое экрана сохраняется и после этого отображается всплывающее окно. По завершению работы со всплывающим окном, оно удаляется а первоначальное содержимое экрана возвращается.</p>
+
+  <h4>Оконные структуры</h4>
+
+  <p>Границы окна могут меняться во время выполнения программы и должны быть доступны всем оконным функциям.</p>
+</article>
+
+
+<!-- 3 Программы, остающиеся резидентными (91) -->
+<article class="article">
+  <div class="anchor" id="p3"></div>
+  <h3>3 Программы, остающиеся резидентными (91)</h3>
+
+  <h4>Что такое TSR программа?</h4>
+
+  <h4>Прерывания в семействе процессоров 8086</h4>
+</article>
+
+
+<!-- 4 Графика (129) -->
+<article class="article">
+  <div class="anchor" id="p4"></div>
+  <h3>4 Графика (129)</h3>
+</article>
+
+
+<!-- 5 Видеоигры (176) -->
+<article class="article">
+  <div class="anchor" id="p5"></div>
+  <h3>5 Видеоигры (176)</h3>
+</article>
+
+
+<!-- 6 Использование последовательного порта (211) -->
+<article class="article">
+  <div class="anchor" id="p6"></div>
+  <h3>6 Использование последовательного порта (211)</h3>
+</article>
+
+
+<!-- 7 Интерпретаторы языка (251) -->
+<article class="article">
+  <div class="anchor" id="p7"></div>
+  <h3>7 Интерпретаторы языка (251)</h3>
+</article>
+
+
+<!-- 8 О манипулировании экраном и герерация звука (293) -->
+<article class="article">
+  <div class="anchor" id="p8"></div>
+  <h3>8 О манипулировании экраном и герерация звука (293)</h3>
+</article>
+
+
+<!-- 9 Интерфейс с мышью (314) -->
+<article class="article">
+  <div class="anchor" id="p9"></div>
+  <h3>9 Интерфейс с мышью (314)</h3>
+</article>
+
+
+<!-- 10 Создание коммерческих диаграмм (358) -->
+<article class="article">
+  <div class="anchor" id="p10"></div>
+  <h3>10 Создание коммерческих диаграмм (358)</h3>
 </article>
 
