--- a/src/components/code/code-c/c-courses/pages/elem-meta-c.html
+++ b/src/components/code/code-c/c-courses/pages/elem-meta-c.html
@@ -3866,5 +3866,174 @@ int main() {
   выполняемые_инструкции
 }
 </pre>
+
+  <p>Первая строка представляет заголовок или сигнатуру функции. Вначале указывается возвращаемый тип функции. Если функция не возвращает никакого значения, то используется тип void.</p>
+  <p>Затем идет имя функции, которое представляет произвольный идентификатор, к которому применяются те же правила, что и к именованию переменных.</p>
+  <p>После имени функции в круглых скобках идет перечисление параметров. Функция может не иметь параметров, в этом случае указываются пустые скобки.</p>
+  <p>После заголовка функции в фигурных скобках идет тело функции, которое содержит выполняемые выражения.</p>
+  <p>В предыдущих статьях уже использовались как минимум две функции. Так, каждая программа на языке Си должна содержать функцию main. Также для вывода строки на консоль применялась функция printf(). Теперь определим свою простейшую функцию:</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+void hello() {
+  printf("Hello!\n");
+}
+
+int main(void) {
+  return 0;
+}
+</pre>
+
+  <p>Кроме стандартной функции main здесь также определена функция hello. Эта функция имеет тип void, то есть фактически она ничего не возвращает. Она не имеет никаких параметров, поэтому после названия функции идут пустые круглые скобки. И все, что делает данная функция, - просто выводит на консоль строку "Hello!".</p>
+  <p>Но если мы запустим сейчас программу на выполнение, то никаких строк на консоль не будет выводиться, более того наша функция hello() не будет выполняться..</p>
+
+  <h4>Вызов функции</h4>
+
+  <p>Для выполнения функции ее необходимо вызвать. Вызов функции осуществляется в форме:</p>
+  <code>имя_функции(аргументы);</code>
+  <p>После имени функции указываются скобки, в которых перечисляются аргументы - значения для параметров функции.</p>
+  <p>В любой программе должна быть как минимум одна функция, которая имеет фиксированное имя main(). Именно с функции main начинается выполнение. Поэтому если мы хотим выполнить функцию hello, то нам надо ее вызвать в функции main.</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+// определение функции
+void hello() {
+  printf("Hello!\n");
+}
+
+int main(void) {
+  hello();    // вызов функции
+  hello();    // вызов функции
+  return 0;
+}
+</pre>
+
+  <p>В данном случае функция hello вызывается два раза. В этом и состоит прелесть функция: мы можем вынести некоторое общее действие, которое может состоять из нескольких строк, в отдельную функцию и затем вызывать многократно в различных местах программы. Поскольку функция hello() не имеет никаких параметров, то в при вызове ей не передается никаких аргументов - указываются просто пустые круглые скобки:</p>
+  <code>hello();</code>
+  <p>В итоге программа два раза выведет строку "Hello".</p>
+
+  <h4>Прототип или описание функции</h4>
+
+  <p>Здесь стоит учесть важный момент - компилятор должен знать о функции до ее вызова. Поэтому вызов функции должен происходить после ее определения, как в случае выше. В некоторых языках это не имеет значение, но в языке Си это играет большую роль. И если, к примеру, мы сначала вызовем, а потом определим функцию, то мы можем получить ошибку на этапе компиляции, как в следующем случае:</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main(void) {
+  hello();
+  hello();
+  return 0;
+}
+
+void hello() {
+  printf("Hello!\n");
+}
+</pre>
+
+  <p>Некоторые компиляторы могут скомпилировать данный код, но тем не менее при компиляции сгенерируют предупреждение.</p>
+  <p>Но есть и другой способ, который заключается в использовании описания функции. Описание функции еще называют прототипом. Формальное определение прототипа выглядит следующим образом:</p>
+  <code>тип имя_функции(параметры);</code>
+  <p>Фактически это заголовок функции. То есть для функции hello прототип будет выглядеть следующим образом:</p>
+  <code>void hello();</code>
+  <p>Применим прототип функции:</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+// описание
+void hello(void);
+
+int main(void) {
+  hello();
+  hello();
+  return 0;
+}
+
+// определение
+void hello() {
+  printf("Hello!\n");
+}
+</pre>
+
+  <p>В данном случае несмотря на то, что определение функции идет после ее вызова, но так как ее описание идет до вызова, то компилятор уже будет знать о функции hello, и никаких проблем в работе программы не возникнет.</p>
+  <p>Стоит отметить, что если функция не принимает никаких параметров, то в ее прототипе в скобках указывается void, как в примере выше с функцией hello.</p>
 </article>
+
+
+<!-- 4.2 Параметры функции -->
+<article class="article">
+  <div class="anchor" id="p4.2"></div>
+  <h3>4.2 Параметры функции</h3>
+
+  <p>Функция может принимать параметры. Параметры позволяет передать извне в функцию некоторые данные, настроить ее выполнение. Параметры перечисляются в скобках после имени функции имеют следующее определение:</p>
+  <code>тип имя_функции (тип параметр1, тип параметр2,... тип параметрN)</code>
+  <p>Для каждого параметра сначала указывается тип, а затем название параметра. Через запятую определяется следующий параметр.</p>
+  <p>Например, мы хотим, чтобы функция выводила разные сообщения на консоль. Для этого определим функцию, которая в качестве параметра принимает массив символов:</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+// функция принимает массив символов
+void print_message(char message[]) {
+  printf("%s\n", message);
+}
+
+int main(void) {
+  print_message("Hello METANIT.COM!");
+  print_message("Hello World!");
+  print_message("Hello work...");
+}
+</pre>
+
+  <p>Здесь функция print_message() принимает один параметр, который называется message и который имеет тип char[]. Параметр message еще называется формальным параметром</p>
+  <p>В функции main три раза вызываем функцию print_message, передавая ей разные значения - строки "Hello METANIT.COM!", "Hello World!" и "Hello work...". Эти значения еще называют аргументами. Таким образом, на консоль будут выведены три строки:</p>
+<pre>
+Hello METANIT.COM!
+Hello World!
+Hello work...
+</pre>
+
+  <p>Прототип функции print_message() выглядел бы следующим образом:</p>
+  <code>void print_message(char[]);</code>
+
+  <p>Полный пример с прототипом:</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+// прототип функции print_message
+void print_message(char[]);
+
+int main(void) {
+  print_message("Hello METANIT.COM!");
+}
+// определение функции print_message
+void print_message(char message[]) {
+  printf("%s\n", message);
+}
+</pre>
+
+  <p>Если необходимо несколько параметров, то они перечисляются через запятую. Например, напишем функцию, которая вычисляет сумму двух чисел:</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+void sum(int x, int y) {
+  printf("%d + %d = %d \n", x, y,  x + y);
+}
+
+int main(void) {
+  sum(1, 2);
+  sum(4, 5);
+  sum(6, 2);
+}
+</pre>
+
+  <p>Функция sum() принимает два параметра типа int.</p>
+  <p>В методе main эта функция вызывается три раза, и каждый раз ей передается два разных аргумента для параметров x и y. Соответствие между аргументами и параметрами устанавливается по их расположению: первый аргумент передает значение для первого параметра, второй аргумент - для второго параметра и так далее. Консольный вывод программы:</p>
+<pre>
+1 + 2 = 3
+4 + 5 = 9
+6 + 2 = 8
+</pre>
+
+  <p>Прототип функции sum выглядел бы следующим образом:</p>
+  <code>void sum(int, int);</code>
+</article>
+
 
