--- a/src/components/code/code-pascal/pascal-books/pages/elem-book-pascal-1.html
+++ b/src/components/code/code-pascal/pascal-books/pages/elem-book-pascal-1.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <h1>2018 Андреева - Программирование - это так просто, программирование - это так сложно. 184стр</h1>
+  <h1>2004 Татьяна Павловская - Паскаль. Программирование на языке высокого уровня. 393стр</h1>
   <p>Конспект книги</p>
 </article>
 
@@ -8,314 +8,95 @@
 <article class="article">
   <h2>Содержание</h2>
 
-      <a href="#p1">1 Простейшая программа на языке Pascal (19)</a>
-  <br><a href="#p2">2 Целые и вещественные числовые типы данных (22)</a>
-  <br><a href="#p3">3 Оператор присваивания (26)</a>
-  <br><a href="#p4">4 Логический тип данных. Условный оператор (33)</a>
-  <br><a href="#p5">5 Циклы с предусловием и постусловием (44)</a>
-  <br><a href="#p6">6 Оператор цикла с параметром (50)</a>
-  <br><a href="#p7">7 Вложенные циклы (56)</a>
-  <br><a href="#p8">8 Порядковые типы данных (61)</a>
-  <br><a href="#p9">9 Одномерные массивы (71)</a>
-  <br><a href="#p10">10 Двумерные массивы (матрицы) (83)</a>
-  <br><a href="#p11">11 Строки (90)</a>
-  <br><a href="#p12">12 Вычислительная сложность алгоритма (98)</a>
-  <br><a href="#p13">13 Подпрограммы (106)</a>
-  <br><a href="#p14">14 Рекурсия (114)</a>
-  <br><a href="#p15">15 Файловые переменные (121)</a>
-  <br><a href="#p16">16 Тип множество (132)</a>
+      <a href="#p1">1 Основные понятия языка (14)</a>
+  <br><a href="#p2">2 Управляющие операторы языка (40)</a>
+  <br><a href="#p3">3 Типы данных, определяемые программистом (58)</a>
+  <br><a href="#p4">4 Модульное программирование (90)</a>
+  <br><a href="#p5">5 Работа с динамической памятью (123)</a>
+  <br><a href="#p6">6 Технология структурного программирования (153)</a>
+  <br><a href="#p7">7 Объектно-ориентированное программирование (164)</a>
+  <br><a href="#p8">8 Иерархии объектов (175)</a>
+  <br><a href="#p9">9 Объекты в динамической памяти (188)</a>
+  <br><a href="#p10">10 Введение в программирование под Windows (199)</a>
 </article>
 
 
-<!-- 1 Простейшая программа на языке Pascal -->
+<!-- 1 Основные понятия языка (14) -->
 <article class="article">
   <div class="anchor" id="p1"></div>
-  <h2>Урок 1 Простейшая программа на языке Pascal (19)</h2>
+  <h3>1 Основные понятия языка (14)</h3>
 
-  <p>Программа на языке <strong>Pascal</strong> (тело программы) должна начинаться со слова <strong>begin</strong>, а заканчиваться словом <strong>end</strong> и знаком точки. Простейшая программа больше ничего не содержит и ничего не делает.</p>
-<pre>
-begin
-end.
-</pre>
-  <p>Для того чтобы программа вывела на экран фразу Hello World, добавим оператор вывода <strong>write</strong></p>
-<pre>
-begin
-  write('Hello World')
-end.
-</pre>
-  <p>Заметим, что перед словом end точка с запятой не ставится, потому что она нужна для разделения операторов между собой. Эту программу можно записать и в одну строку, если заменить символы перевода строки на пробелы.</p>
-  <code>begin write('Hello World') end.</code>
-  <p>Чтобы окно консоли сразу не закрывалось, нужно добавить в конце программы оператор <strong>readln</strong></p>
-<pre>
-begin
-  write('Hello World');
-  readln
-end.
-</pre>
-
-  <h4>Вывод данных</h4>
-
-  <p>Для вывода информации служат стандартные процедуры <strong>write()</strong> и <strong>writeln()</strong>. В скобках через запятую перечисляются параметры, которые нужно вывести. Число параметров не ограничено. В качестве параметров могут быть константы, переменные, выражения.</p>
-  <p>Единственное отличие между процедурами write и writeln: после вызова процедуры write курсор остается на той же строке, после вызова процедуры writeln курсор переходит на новую строку.</p>
-  <p>Строковая константа пишется в одинарных кавычках. Если нужно напечатать кавычку, то нужно написать две кавычки подряд</p>
-  <code>write('Hello ', 'World ', 'O''key')</code>
-  <code>Hello World O'key</code>
-  <p>Числовые константы пишутся без кавычек. При печати параметров, пробелы между ними автоматически не вставляются</p>
-  <code>write(1, 2, 3)</code>
-  <code>123</code>
-  <p>Чтобы они разделялись пробелом можно добавить символы пробела или отформатировать печать.</p>
-  <code>write(1, ' ', 2, ' ', 3)</code>
-  <code>1 2 3</code>
-  <p>Для форматирования печати после каждого элемента списка вывода ставится двоеточие и целое число, которое указывает, сколько позиций должен занимать элемент. Если элемент меньше этого числа то добавляются пробелы слева до необходимого значения. Если больше то элементв выводится полностью и пробелы не добавляются</p>
-  <code>write(1:2, 2:3, 3:3, 77777:3)</code>
-  <code> 1  2  377777</code>
-  <p>При форматировании вывода вещественных чисел, после второго двоеточия указывается число цифр после десятичной точки. При этом вещественное число округляется по правилам математики.</p>
-  <code>write(pi:0:0, pi:5:2, pi:8:5, pi/2:2:0)</code>
-  <code>3 3.14 3.14159 2</code>
-  <p>Если в качестве параметра записано выражение, то выведется результат его вычисления.</p>
-  <code>write(7 + 5)</code>
-  <code>12</code>
-
-  <details>
-    <summary>Задания</summary>
-
-    <p>1. Что будет выведено на экран?</p>
-<pre>
-write('Press any key');
-writeln(2, '+', 2, '=', 4);
-write('7+5', '='); writeln(7 + 5);
-</pre>
-<pre>
-Press any key2+2=4
-7+5=12
-</pre>
-
-    <p>2. Семью различными способами вывести на экран фразу 2+2=4</p>
-<pre>
-writeln('2+2=4');
-writeln('2+2=', 4);
-writeln('2+2', '=', 4);
-writeln('2+', 2, '=', 4);
-writeln(2, '+', 2, '=', 4);
-writeln(2, '+', 2, '=', 2+2);
-writeln('2', '+', '2', '=', 4);
-readln
-</pre>
-
-    <p>3. Напишите программу, которая выводит на весь экран ваше имя. Линии букв можно составлять из символов * или других.</p>
-<pre>
-writeln(' *   *  ****     *     *   *');
-writeln(' *  **  *   *   * *    *   *');
-writeln(' * * *  ****   *****   *****');
-writeln(' **  *  *   *  *   *   *   *');
-writeln(' *  **  ****   *   *   *   *');
-</pre>
-  </details>
 </article>
 
 
-<!-- 2 Целые и вещественные числовые типы данных -->
+<!-- 2 Управляющие операторы языка (40) -->
 <article class="article">
   <div class="anchor" id="p2"></div>
-  <h2>Урок 2 Целые и вещественные числовые типы данных (22)</h2>
+  <h3>2 Управляющие операторы языка (40)</h3>
 
-  <h4>Целые числа</h4>
-  <p>Тип <strong>integer</strong> в Borland Pascal от -32768 до 32767</p>
-  <p>Тип <strong>longint</strong> в Borland Pascal от -2147483648 до 2147483647</p>
-  <p>Тип <strong>integer</strong> в Delphi от -2147483648 до 2147483647</p>
-  <p>Арифметические операции с целыми числами : +, -, *, div, mod.</p>
-  <p>div - деление нацело, дробная чать просто отбрасывается</p>
-  <p>mod - остаток от деления нацело</p>
-  <code>a mod a = a - ((a div b) * b)</code>
-
-  <h4>Вещественные чила</h4>
-  <p>Тип <strong>real</strong></p>
-
-  <h4>Функции для работы с числами</h4>
-  <code>abs(x) sqr(x) sqrt(x) pi sin(x) cos(x) arctan(x) exp(x) ln(x) round(x) trunc(x) int(x) frac(x)</code>
-
-  <h4>Ввод данных</h4>
-
-  <p>Для ввода информации служат стандартные процедуры <strong>read()</strong> и <strong>readln()</strong>. В скобках через запятую перечисляются имена переменных, которые нужно ввести. Число переменных не ограничено.</p>
-  <p></p>Выполнение программы будет приостановлено, до тех пор пока пользователь не введет соответствующее количество значений. Чтобы ввести несколько переменных, они должны отделяться пробелом или переводом строки. После ввода последнего значения нужно нажать Enter, чтобы все значения записались в переменные.
-  <p>Единственное отличие между процедурами read и readln: после вызова процедуры read курсор остается на той же строке, после вызова процедуры readln курсор переходит на новую строку.</p>
-  <p>После нажатия клавиши Enter курсор в любом случае переходит на новую строку, поэтому разницу между операторами read и readln заметить невозможно.</p>
-
-  <details>
-    <summary>Задания</summary>
-
-    <p>1. Вычислите</p>
-    <code>writeln(20 div 6); // 3</code>
-    <code>writeln(20 mod 6); // 2</code>
-    <code>writeln(20 div 4); // 5</code>
-    <code>writeln(20 mod 4); // 0</code>
-    <code>writeln(2 div 5); // 0</code>
-    <code>writeln(2 mod 5); // 2</code>
-    <code>writeln(trunc(6.9)); // 6</code>
-    <code>writeln(round(6.9)); // 7</code>
-    <code>writeln(trunc(-1.8)); // -1</code>
-    <code>writeln(round(-1.8)); // -2</code>
-    <code>writeln(round(0.5)); // 0</code>
-    <code>writeln(round(-0.5)); // 0</code>
-
-    <p>2. Определите тип выражения (integer или real)</p>
-    <code>1 + 0.0</code>
-    <code>20 / 4</code>
-    <code>sqr(4)</code>
-    <code>sqr(5.0)</code>
-    <code>sqrt(16)</code>
-    <code>sin(0)</code>
-    <code>trunc(pi)</code>
-    <code>int(pi)</code>
-
-    <p>3. Напишите программу, в которой описана одна переменная a. Введите ее значение и выведете ее на экран.</p>
-<pre>
-var a: integer;
-begin
-  write('Enter value b = ');
-  readln(a);
-  writeln('b = ', a);
-  readln
-end.
-</pre>
-  </details>
 </article>
 
 
-<!-- 3 Оператор присваивания (26) -->
+<!-- 3 Типы данных, определяемые программистом (58) -->
 <article class="article">
   <div class="anchor" id="p3"></div>
-  <h2>Урок 3 Оператор присваивания (26)</h2>
+  <h3>3 Типы данных, определяемые программистом (58)</h3>
 
-  <p>Пример 1. Пример программы</p>
-<pre>
-var a, b, c: real;
-    i, j, k: integer;
-begin
-  a := 1;
-  b := 2.0;
-  write('Enter i = ');
-  readln(i);
-  j := sqr(i);
-  i := i + 1;
-  c := sin(a + b);
-  writeln('a = ', a:2:2, ' b = ', b:2:2, ' c = ', c:2:2);
-  writeln('i = ', i, ' j = ', j:2);
-  readln
-end.
-</pre>
-
-  <p>Пример 2. Способ выделения цифр из трехзначного числа в переменной a</p>
-<pre>
-var a, a1, a2, a3: integer;
-begin
-  a := 765;
-  a1 := a div 100;
-  a2 := a div 10 mod 10;
-  a3 := a mod 10;
-  writeln('a = ', a);
-  writeln('a1 = ', a1, ' a2 = ', a2, ' a3 = ', a3);
-  readln
-end.
-</pre>
-
-  <details>
-    <summary>Задачи</summary>
-
-    <p>1. По введеному числу выдать сумму его цифр. На вход подается целое число k (0 ≤ k ≤ 9999)</p>
-    <p>Пример</p>
-    <code>2008</code>
-    <code>10</code>
-  </details>
 </article>
 
 
-<!-- 4 Логический тип данных. Условный оператор (33) -->
+<!-- 4 Модульное программирование (90) -->
 <article class="article">
   <div class="anchor" id="p4"></div>
-  <h2>Урок 4 Логический тип данных. Условный оператор (33)</h2>
+  <h3>4 Модульное программирование (90)</h3>
+
 </article>
 
 
-<!-- 5 Циклы с предусловием и постусловием (44) -->
+<!-- 5 Работа с динамической памятью (123) -->
 <article class="article">
   <div class="anchor" id="p5"></div>
-  <h2>Урок 5 Циклы с предусловием и постусловием (44)</h2>
+  <h3>5 Работа с динамической памятью (123)</h3>
+
 </article>
 
 
-<!-- 6 Оператор цикла с параметром (50) -->
+<!-- 6 Технология структурного программирования (153) -->
 <article class="article">
   <div class="anchor" id="p6"></div>
-  <h2>Урок 6 Оператор цикла с параметром (50)</h2>
+  <h3>6 Технология структурного программирования (153)</h3>
+
 </article>
 
 
-<!-- 7 Вложенные циклы (56) -->
+<!-- 7 Объектно-ориентированное программирование (164) -->
 <article class="article">
   <div class="anchor" id="p7"></div>
-  <h2>Урок 7 Вложенные циклы (56)</h2>
+  <h3>7 Объектно-ориентированное программирование (164)</h3>
+
 </article>
 
 
-<!-- 8 Порядковые типы данных (61) -->
+<!-- 8 Иерархии объектов (175) -->
 <article class="article">
   <div class="anchor" id="p8"></div>
-  <h2>Урок 8 Порядковые типы данных (61)</h2>
+  <h3>8 Иерархии объектов (175)</h3>
+
 </article>
 
 
-<!-- 9 Одномерные массивы (71) -->
+<!-- 9 Объекты в динамической памяти (188) -->
 <article class="article">
   <div class="anchor" id="p9"></div>
-  <h2>Урок 9 Одномерные массивы (71)</h2>
+  <h3>9 Объекты в динамической памяти (188)</h3>
+
 </article>
 
 
-<!-- 10 Двумерные массивы (матрицы) (83) -->
+<!-- 10 Введение в программирование под Windows (199) -->
 <article class="article">
   <div class="anchor" id="p10"></div>
-  <h2>Урок 10 Двумерные массивы (матрицы) (83)</h2>
+  <h3>10 Введение в программирование под Windows (199)</h3>
+
 </article>
 
-
-<!-- 11 Строки (90) -->
-<article class="article">
-  <div class="anchor" id="p11"></div>
-  <h2>Урок 11 Строки (90)</h2>
-</article>
-
-
-<!-- 12 Вычислительная сложность алгоритма (98) -->
-<article class="article">
-  <div class="anchor" id="p12"></div>
-  <h2>Урок 12 Вычислительная сложность алгоритма (98)</h2>
-</article>
-
-
-<!-- 13 Подпрограммы (106) -->
-<article class="article">
-  <div class="anchor" id="p13"></div>
-  <h2>Урок 13 Подпрограммы (106)</h2>
-</article>
-
-
-<!-- 14 Рекурсия (114) -->
-<article class="article">
-  <div class="anchor" id="p14"></div>
-  <h2>Урок 14 Рекурсия (114)</h2>
-</article>
-
-
-<!-- 15 Файловые переменные (121) -->
-<article class="article">
-  <div class="anchor" id="p15"></div>
-  <h2>Урок 15 Файловые переменные (121)</h2>
-</article>
-
-
-<!-- 16 Тип множество (132) -->
-<article class="article">
-  <div class="anchor" id="p16"></div>
-  <h2>Урок 16 Тип множество (132)</h2>
-</article>
